--- a/package.json
+++ b/package.json
@@ -21,6 +21,8 @@
     "dependencies": {
         "bootstrap": "^5.2.3",
         "bootstrap-vue": "^2.23.1",
+        "crypto-js": "^4.1.1",
+        "jsencrypt": "^3.3.2",
         "vue": "^2.6.14",
         "vue-loader": "^15.9.7",
         "vue-router": "^3.6.5",
